# StockSim

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  main.cpp
ci/: build.sh  run.sh
db/: mydb.db  mysql.sql  tickers.csv
include/: Exchange.h  Portfolio.h  SQLiteUtils.h  Stock.h
setup/: buildTickers.py
src/: CMakeLists.txt  Exchange.cpp  Portfolio.cpp  SQLiteUtils.cpp  Stock.cpp
